<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ConnectFourActivity!</string>
    <string name="app_name">ConnectFour</string>
    <string name="blank"></string>
    <string name="vs">vs.</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    
    <string name="player1_settings">Player 1: </string>
    <string name="player2_settings">Player 2: </string>
    
    <string name="human">Human</string>
    <string name="beginner">Beginner</string>
    <string name="intermediate">Intermediate</string>
    <string name="expert">Expert</string>
    

</resources>