<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey" >

    <TextView
        android:id="@+id/Player1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/red"
        android:text="@string/player1_settings"
        android:background="@color/grey"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<RadioGroup 
	    android:id="@+id/player1_radio_group"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/Player1_text"  >
	    
	    <RadioButton
	        android:id="@+id/radio00"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/human"
	        android:checked="true" />
	    
	    <RadioButton
	        android:id="@+id/radio01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/beginner" />
	
	    <RadioButton
	        android:id="@+id/radio02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/intermediate" />
	
	    <RadioButton
	        android:id="@+id/radio03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/expert" />
	</RadioGroup>
	
	
	<TextView
        android:id="@+id/Player2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/player1_radio_group"
        android:text="@string/player2_settings"
        android:textColor="@color/black"
        android:background="@color/grey"
        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	<RadioGroup 
	    android:id="@+id/player2_radio_group"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/Player2_text"  >
	    
	    <RadioButton
	        android:id="@+id/radio10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/human" />
	    
	    <RadioButton
	        android:id="@+id/radio11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/beginner" />
	
	    <RadioButton
	        android:id="@+id/radio12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/intermediate"
	        android:checked="true" />
	
	    <RadioButton
	        android:id="@+id/radio13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/expert" />
	</RadioGroup>
</RelativeLayout>